--- a/README
+++ b/README
@@ -12,8 +12,7 @@ SYNOPSIS
 
     -p app folder names are changing, this option will update path in
     ~/.alios config file. To have paths updated at the start of bash
-    session add following line to your ~/.bashrc file 'alios -p && if [ -f
-    ~/.alios ];then source ~/.alios; fi'
+    session add following line to your ~/.bashrc file 'alios -p && source ~/.alios'.
 
     -s search for installed apps
 
